# Aphenos-Blockchain

./: .gitignore  Cargo.toml  README.md
aphenos-cli/: Cargo.toml
aphenos-cli/src/: main.rs
aphenos-core/: Cargo.toml
aphenos-core/src/: config.rs  lib.rs
aphenos-node/: Cargo.toml
aphenos-node/src/: main.rs
aphenos-pouw/: Cargo.toml
aphenos-pouw/src/: lib.rs
