[package]
name = "aphenos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
aphenos-core = { path = "../aphenos-core" }
ed25519-dalek = "1"
hex = "0.4.3"
blake3 = "1.5"